--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,6 @@
 [mypy]
 python_version = 3.10
 disallow_untyped_defs = True
+plugins = ./mypy_plugins/validated_dataclasses.py
 [mypy-lib.*]
 ignore_missing_imports = True
